--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,13 @@
     "build:bun": "bun build --compile --minify --sourcemap ./src/index.ts --outfile dist/server",
     "check:types": "tsc -b",
     "dev": "bun run --tsconfig-override ./tsconfig.dev.json --inspect=localhost:6499/ --hot src/index.ts",
-    "generate:types": "bun run scripts/index.ts"
+    "db:generate": "prisma generate --no-hints",
+    "db:migrate": "prisma migrate deploy",
+		"db:migrate:dev": "prisma migrate dev",
+		"db:seed": "bun run prisma/seed/seed.ts",
+		"db:reset": "prisma migrate reset --force",
+    "generate:types": "bun run scripts/index.ts",
+    "prepare": "pnpm run db:generate && pnpm run build && pnpm run build:types"
   },
   "dependencies": {
     "@orpc/client": "^1.10.0",
@@ -18,8 +24,8 @@
     "@orpc/openapi": "^1.10.0",
     "@orpc/server": "^1.10.0",
     "@orpc/zod": "^1.10.0",
-    "@prisma/adapter-mariadb": "^6.17.1",
-    "@prisma/client": "^6.17.1",
+    "@prisma/adapter-mariadb": "^6.15.0",
+    "@prisma/client": "^6.15.0",
     "dotenv-flow": "^4.1.0",
     "envalid": "^8.1.0",
     "hono": "^4.10.1",
@@ -27,7 +33,7 @@
   },
   "devDependencies": {
     "@types/bun": "^1.3.0",
-    "prisma": "^6.17.1",
+    "prisma": "^6.15.0",
     "tsdown": "^0.15.9",
     "typescript": "^5.9.3"
   },
