chore: add more functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,15 +21,20 @@
 	"eslint.enable": false,
 	"prettier.enable": false,
 	"cSpell.words": [
+		"assetversion",
 		"autoincrement",
 		"boostname",
 		"bosstiary",
+		"clienttype",
+		"clientversion",
 		"creationdata",
 		"criticalhit",
+		"crystalserver",
 		"currentmount",
 		"datasource",
 		"daystreak",
 		"depotitems",
+		"devicecookie",
 		"envalid",
 		"Focusable",
 		"guildid",
@@ -86,6 +91,7 @@
 		"quickloot",
 		"raceid",
 		"skulltime",
+		"stayloggedin",
 		"tailwindcss",
 		"targetguild",
 		"taskhunt",
