--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,7 +13,7 @@
 		"db:generate": "prisma generate --no-hints",
 		"db:migrate": "prisma migrate deploy",
 		"db:migrate:dev": "prisma migrate dev",
-		"db:seed": "bun run prisma/seed/seed.ts",
+		"db:seed": "bun run prisma/seed/index.ts",
 		"db:reset": "prisma migrate reset --force",
 		"generate:types": "bun run scripts/index.ts",
 		"prepare": "pnpm run db:generate && pnpm run build && pnpm run build:types"
