--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -9,6 +9,7 @@
 		"strict": true,
 		"skipLibCheck": true,
 		"paths": {
+			"generated/*": ["./generated/*"],
 			"@/*": ["./src/*"]
 		},
 		"outDir": "./dist",
