--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -6,6 +6,8 @@
 		"declaration": true,
 		"declarationMap": true,
 		"verbatimModuleSyntax": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
 		"strict": true,
 		"skipLibCheck": true,
 		"paths": {
