--- a/biome.json
+++ b/biome.json
@@ -38,6 +38,14 @@
 		"enabled": true,
 		"indentStyle": "tab"
 	},
+	"css": {
+		"formatter": {
+			"enabled": true
+		},
+		"linter": {
+			"enabled": true
+		}
+	},
 	"assist": { "actions": { "source": { "organizeImports": "on" } } },
 	"linter": {
 		"enabled": true,
