feat: add information section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -153,6 +153,7 @@
 		"torsocolor",
 		"tournamentticketpurchasestate",
 		"tsyringe",
+		"verdana",
 		"vipgroup",
 		"vipgrouplist",
 		"vipgroups",
