chore: test new workflow to lint (#4)
* chore: test new workflow to lint

* fix: pipe

* fix: add bun install in pipeline :)

* fix: change version of bun to latest

* feat: add check and types workflows

* fix: type error in ui/Slot.tsx

* feat: test with build workflow

* chore: try build workflow with dependencie

* feat: add ISSUE_TEMPLATE with code of conduct

* feat: add a auto labeler in pull request

* fix: change triggers pr-labeler

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,14 +5,17 @@
 	"scripts": {
 		"dev": "vite --port 3000",
 		"build": "vite build && tsc --noEmit",
-		"check": "tsc --noEmit",
 		"serve": "vite preview",
-		"start": "vite"
+		"start": "vite",
+		"types": "tsc --noEmit",
+		"lint": "biome lint .",
+		"check": "biome check ."
 	},
 	"keywords": [],
 	"packageManager": "pnpm@10.18.3",
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
+		"@miforge/api": "workspace:*",
 		"@orpc/client": "^1.10.0",
 		"@orpc/tanstack-query": "^1.10.0",
 		"@tailwindcss/vite": "^4.1.15",
