--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 	],
 	"scripts": {
 		"dev": "turbo run dev",
+		"check": "turbo run check",
+		"lint": "turbo run lint",
+		"types": "turbo run types",
+		"build": "turbo run build",
 		"changeset": "changeset",
 		"changeset:status": "changeset status --verbose",
 		"changeset:version": "changeset version",
