feat: add route store history

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
 		"bosstiary",
 		"clienttype",
 		"clientversion",
+		"commitlint",
 		"creationdata",
 		"criticalhit",
 		"crystalserver",
@@ -169,6 +170,8 @@
 		"tauri",
 		"Themebox",
 		"tibiaclient",
+		"tibiacoin",
+		"tibiacointrusted",
 		"Toplayers",
 		"torsocolor",
 		"tournamentticketpurchasestate",
