--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
 		"@miforge/api": "workspace:*",
 		"@orpc/client": "^1.10.0",
 		"@orpc/tanstack-query": "^1.10.0",
+		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tailwindcss/vite": "^4.1.15",
 		"@tanstack/react-query": "^5.90.5",
 		"@tanstack/react-query-devtools": "^5.90.2",
