--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -18,6 +18,6 @@
 		"types": ["bun"],
 		"composite": true,
 		"jsx": "react-jsx",
-		"jsxImportSource": "hono/jsx"
+		"jsxImportSource": "react"
 	}
 }
