fix: error react dependencie by email templates

--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -6,14 +6,16 @@
 	"scripts": {
 		"preview": "email dev -p 3001 --dir ./src/templates"
 	},
+	"peerDependencies": {
+		"react": "catalog:react",
+		"react-dom": "catalog:react"
+	},
 	"dependencies": {
 		"@react-email/components": "^1.0.0",
-		"@react-email/preview-server": "^5.0.1",
-		"react": "catalog:react",
-		"react-dom": "catalog:react",
 		"react-email": "^5.0.1"
 	},
 	"devDependencies": {
+		"@react-email/preview-server": "^5.0.1",
 		"@types/bun": "catalog:"
 	}
 }
