--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,6 +33,8 @@
 		"hono": "^4.10.4",
 		"jsonwebtoken": "^9.0.2",
 		"nodemailer": "^7.0.10",
+		"react": "catalog:react",
+		"react-dom": "catalog:react",
 		"reflect-metadata": "^0.2.2",
 		"tsyringe": "^4.10.0",
 		"zod": "catalog:"
