chore: try to build in action

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,7 +38,7 @@
 	},
 	"devDependencies": {
 		"@vitejs/plugin-react": "^5.1.0",
-		"typescript": "catalog:",
+		"typescript": "catalog:ts",
 		"vite": "^7.2.2"
 	}
 }
