--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -46,7 +46,7 @@
 		"prisma": "^6.19.0",
 		"prisma-dbml-generator": "^0.12.0",
 		"tsdown": "^0.15.12",
-		"typescript": "catalog:"
+		"typescript": "catalog:ts"
 	},
 	"packageManager": "pnpm@10.18.3"
 }
