--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,7 +3,6 @@ packages:
   - packages/*
 
 catalog:
-  typescript: ^5.9.3
   "@types/bun": ^1.3.2
   zod: ^4.1.12
 
@@ -11,7 +10,10 @@ catalogs:
   react:
     react: ^19.2.0
     react-dom: ^19.2.0
+  ts:
+    typescript: ^5.9.3
 
 overrides:
   react: "catalog:react"
   react-dom: "catalog:react"
+  typescript: "catalog:ts"
