feat: add new packge with build process to be used as email send

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,6 +20,7 @@
 		"prepare": "pnpm run db:generate && pnpm run build && pnpm run build:types"
 	},
 	"dependencies": {
+		"@miforge/email": "workspace:*",
 		"@orpc/client": "^1.11.1",
 		"@orpc/json-schema": "^1.11.1",
 		"@orpc/openapi": "^1.11.1",
@@ -32,6 +33,8 @@
 		"hono": "^4.10.4",
 		"jsonwebtoken": "^9.0.2",
 		"nodemailer": "^7.0.10",
+		"react": "catalog:react",
+		"react-dom": "catalog:react",
 		"reflect-metadata": "^0.2.2",
 		"tsyringe": "^4.10.0",
 		"zod": "catalog:"
@@ -40,9 +43,11 @@
 		"@types/bun": "catalog:",
 		"@types/jsonwebtoken": "^9.0.10",
 		"@types/nodemailer": "^7.0.3",
+		"@types/react": "catalog:react",
+		"@types/react-dom": "catalog:react",
 		"prisma": "^6.19.0",
 		"prisma-dbml-generator": "^0.12.0",
-		"tsdown": "^0.15.12",
+		"tsdown": "catalog:",
 		"typescript": "catalog:ts"
 	},
 	"packageManager": "pnpm@10.18.3"
