--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,9 +1,11 @@
 packages:
   - apps/*
+  - packages/*
 
 catalog:
   "@types/bun": ^1.3.2
   zod: ^4.1.12
+  tsdown: ^0.15.12
 
 catalogs:
   react:
