chore: add prepare to generate build types in install

--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -18,7 +18,8 @@
 		"preview": "email dev -p 3001 --dir ./src/templates",
 		"clean": "rm -rf ./dist",
 		"build": "pnpm run clean && tsdown && tsc -p tsconfig.types.json",
-		"typecheck": "tsc -p tsconfig.types.json --noEmit"
+		"typecheck": "tsc -p tsconfig.types.json --noEmit",
+		"prepare": "pnpm run build"
 	},
 	"peerDependencies": {
 		"react": "catalog:react",
