feat: add first client using redis and refactor folder routes

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,7 +1,8 @@
+# Environment Configuration for API Application
 NODE_ENV=development
-
 PORT=4000
 
+# Database Configuration
 DATABASE_URL="mysql://ferumbra:ferumbra_password@localhost:3306/ferumbra"
 SHADOW_DATABASE_URL="mysql://root:root@localhost:3306/ferumbra_shadow"
 DATABASE_HOST=localhost
@@ -10,9 +11,14 @@ DATABASE_PASSWORD=ferumbra_password
 DATABASE_NAME=ferumbra
 
 
+# Configuração de CORS
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
 
+# Authentication
 JWT_SECRET=your_jwt_secret_key_here
+
+# Redis
+REDIS_URL=redis://:dev_secret@127.0.0.1:6379/0
 
 
 # Mailer Configuration
@@ -23,3 +29,9 @@ MAILER_SMTP_PORT=465
 MAILER_SMTP_SECURE=true
 MAILER_SMTP_USER=your_email@example.com
 MAILER_SMTP_PASS=your_email_password
+# Mailer With Google OAuth2 (Optional)/
+#MAILER_GOOGLE_TYPE=OAuth2
+#MAILER_GOOGLE_USER=your_email@example.com
+#MAILER_GOOGLE_CLIENT_ID=your_google_client_id
+#MAILER_GOOGLE_CLIENT_SECRET=your_google_client_secret
+#MAILER_GOOGLE_REFRESH_TOKEN=your_google_refresh_token
