--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,6 +31,7 @@
 		"dotenv-flow": "^4.1.0",
 		"envalid": "^8.1.1",
 		"hono": "^4.10.4",
+		"ioredis": "^5.8.2",
 		"jsonwebtoken": "^9.0.2",
 		"nodemailer": "^7.0.10",
 		"react": "catalog:react",
