feat: add bullmq to handle workers and using tsryinge to be easy to send a request

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,7 @@
 		"@orpc/zod": "^1.11.1",
 		"@prisma/adapter-mariadb": "^6.19.0",
 		"@prisma/client": "^6.19.0",
+		"bullmq": "^5.63.0",
 		"dotenv-flow": "^4.1.0",
 		"envalid": "^8.1.1",
 		"hono": "^4.10.4",
