--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -22,6 +22,7 @@ REDIS_URL=redis://:dev_secret@127.0.0.1:6379/0
 
 
 # Mailer Configuration
+# This configuration is going to enable the worker to send emails.
 MAILER_ENABLED=true
 MAILER_FROM_NAME=Mitg Suporte
 MAILER_SMTP_HOST=smtp.host.com
