fix: large bundle using zod in route. and add bundle analyzer

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -50,6 +50,7 @@
 		"@types/react": "catalog:react",
 		"@types/react-dom": "catalog:react",
 		"@vitejs/plugin-react": "^5.1.1",
+		"rollup-plugin-visualizer": "^6.0.5",
 		"typescript": "catalog:ts",
 		"vite": "^7.2.2"
 	}
