feat: add discord integration with bot

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -167,6 +167,7 @@
 		"quintenary",
 		"raceid",
 		"remainingdailytournamentplaytime",
+		"Repliable",
 		"requirepass",
 		"restrictedstore",
 		"retrohardcore",
