--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,6 +32,7 @@
 		"@prisma/adapter-mariadb": "^6.19.0",
 		"@prisma/client": "^6.19.0",
 		"bullmq": "^5.65.1",
+		"discord.js": "^14.25.1",
 		"dotenv-flow": "^4.1.0",
 		"fast-xml-parser": "^5.3.2",
 		"hono": "^4.10.7",
