feat: add routes to integrate with discord, link, confirmLink and unlink

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -48,3 +48,14 @@ MAILER_SMTP_PASS=your_email_password
 #MAILER_GOOGLE_CLIENT_ID=your_google_client_id
 #MAILER_GOOGLE_CLIENT_SECRET=your_google_client_secret
 #MAILER_GOOGLE_REFRESH_TOKEN=your_google_refresh_token
+
+
+
+# Discord Configuration
+# If you enable Discord integration, make sure to fill all the fields below.
+DISCORD_ENABLED=false
+#DISCORD_TOKEN=your_discord_bot_token_here
+#DISCORD_CLIENT_ID=your_discord_client_id_here
+#DISCORD_CLIENT_SECRET=your_discord_client_secret_here
+#DISCORD_REDIRECT_URI=https://yoursite.com/v1/accounts/oauth/discord/callback
+#DISCORD_GUILD_ID=your_discord_guild_id_here
